# Agentic_Virtual_Assistant

./: README.md  main.py  main_mocktest.py  pyproject.toml
Crew_AI/: agents_config.py
Crew_AI/tools_and_utils/: crew_tools.py
Flow_Crew_AI/: flow_conversation_with_rag.py  flow_engine.py  flow_main.py  flow_sample.py  flow_with_crew_ai.py  llama_rag_sample_working code.py  schema_of_workflow.html
Flow_Crew_AI/Crew_Engine/: character_personality.py  first_crew.py  hierarchical_sample_crew.py  hierarchical_v1.py  rag_crew.py  sample_testing_rag_engine.py  tool_for_crew.py
Flow_Crew_AI/Crew_Engine/configs/: __init__.py  agents.yaml  tasks.yaml
Flow_Crew_AI/Dumps_Templates/: crew_mocktest.py  dumps.py  first_crew.py  flow_conversation_with_rag.py  flow_engine.py  flow_with_crew_ai.py  hierarchical_sample_crew.py  rag_crew.py  sample_testing_rag_engine.py  test_groq_llm.py
Flow_Crew_AI/Groq_Chat_Completion_Engine/: Chat_Completion_Pipeline.py
Flow_Crew_AI/LLM_and_Model_Config/: llm_config.py
Flow_Crew_AI/Llama_RAG_Engine/: character_personality.py  hybrid_ingestion_pipeline.py  llama_index_rag.py  llama_index_rag_engine.py  llama_index_rag_v1.py  llama_index_to_be_transfered.py  llama_index_vector_hybrid_loader.py
Flow_Crew_AI/Memory_Layer/: llama_index_memory_context.py  memory_for_past_context.py
Flow_Crew_AI/memory_history/: history.db
LLM_and_Model_Config/: llm_config.py
Memory_Layer/: memory.py  memory_for_past_context.py
Team_A_Crew/: flow_example.py
Team_A_Crew/configs/: agents_config.py  tasks_config.py
(+7 files in other folders)
