[project]
name = "agentic-virtual-assistant"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "onnxruntime==1.21.1",
    "crewai>=0.119.0",
    "crewai-tools>=0.44.0",
    "docx2txt>=0.9",
    "llama-index>=0.12.35",
    "llama-index-embeddings-huggingface>=0.5.4",
    "llama-index-llms-groq>=0.3.1",
    "llama-index-vector-stores-milvus>=0.8.2",
    "flagembedding>=1.3.4",
    "sentencepiece>=0.2.0",
    "llama-index-memory-mem0>=0.3.1",
    "groq>=0.25.0",
    "langchain>=0.3.25",
    "langchain-groq>=0.3.2",
]

